Fix responsiveness issue on mobile for landing page

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,12 +1,17 @@
 .section {
     &--landing {
-        height: 100vh;
+        min-height: 100vh;
         max-width: 670px;
         margin-left: auto;
         margin-right: auto;
-        display: flex;
-        align-items: center;
         text-align: center;
+        padding-top: 90px;
+        padding-bottom: 40px;
+        @include media(768px) {
+            display: flex;
+            align-items: center;
+            text-align: center;
+        }
     }
 
     &__logo {
@@ -107,6 +112,14 @@
         &__link {
             display: block;
             padding: 10px 8px;
+
+            @include media(max-width 767px) {
+                padding: 0px 8px;
+                svg {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
         }
     }
 }
@@ -114,8 +127,13 @@
 .pre-caption {
     position: fixed;
     display: flex;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    padding-top: 10px;
     @include media(768px) {
         left: -120px;
+        right: auto;
         bottom: 160px;
         transform: rotate(-90deg);
     }
